# news_blog

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  example.env  pyproject.toml  requirements.txt  wsgi.py
blog/: app.py  commands.py  config.py  db.sqlite  enums.py  models.py
blog/admin/: __init__.py  views.py
blog/api/: article.py  author.py  tag.py  user.py  views.py
blog/api/permissions/: user.py
blog/article/: views.py
blog/auth/: views.py
blog/author/: views.py
blog/forms/: article.py  auth.py  user.py
blog/schemas/: __init__.py  article.py  author.py  tag.py  user.py
blog/templates/: base.html  index.html  nav_bar.html
blog/templates/admin/: index.html
blog/templates/articles/: article_by_tags.html  create.html  details.html  list.html
blog/templates/auth/: login.html
blog/templates/authors/: list.html
blog/templates/macro/: formhelpers.html
blog/templates/users/: details.html  list.html  profile.html  register.html
blog/user/: views.py
migrations/versions/: 28474160c650_.py  758e5f60c981_.py  a340cbdd7531_.py  aaba9cad0e70_.py  d33525cf6a52_.py  e6962de036f3_.py
