[tool.poetry]
name = "news-blog"
version = "0.1.0"
description = ""
authors = ["vitalijtverskoj <vitalijtverskoj@gmail.com>"]
readme = "README.md"
#packages = [{include = "news_blog"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "1.1.4"
flask-sqlalchemy = "2.5.1"
python-dotenv = "0.21.0"
flask-login = "0.6.2"
psycopg2-binary = "2.9.5"
flask-migrate = "4.0.4"
wtforms = "3.0.1"
email-validator = "1.3.1"
flask-wtf = "1.1.1"
flask-admin = "1.6.0"
flask-combo-jsonapi = "^1.1.0"


[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
